Replaced grap bash script with tools/grap/grap.py Renamed GTSI-grap to grap-match make install copies grap.py to /usr/local/bin, renamed as grap

--- a/graphes/tools/CMakeLists.txt
+++ b/graphes/tools/CMakeLists.txt
@@ -4,8 +4,11 @@ set (TOOLS OFF CACHE BOOL "Tools")
 
 if(${TOOLS})
 
-  # grap (GTSI-grap)
-  add_subdirectory(GTSI-grap)
+  # grap-match
+  add_subdirectory(grap-match)
+
+  # grap
+  add_subdirectory(grap)
 
   # tests
   add_subdirectory(tests)
