First version of multithreaded grap-match.

--- a/graphes/tools/grap-match/CMakeLists.txt
+++ b/graphes/tools/grap-match/CMakeLists.txt
@@ -6,7 +6,7 @@ set(SRCS_GRAP-MATCH
 
 # grap-match
 add_executable(grap-match ${SRCS_GRAP-MATCH})
-target_link_libraries(grap-match common GTSI graph nodeinfo)
+target_link_libraries(grap-match common GTSI graph nodeinfo pthread)
 
 if(NOT "${MSVC}" AND NOT "${MSYS}")
   install (TARGETS grap-match DESTINATION /usr/local/bin) 
