Added target test pointing to python2 test_all.py

--- a/graphes/tools/tests/CMakeLists.txt
+++ b/graphes/tools/tests/CMakeLists.txt
@@ -6,10 +6,12 @@ set(SRCS_TESTS
 
 # tests
 add_executable(tests ${SRCS_TESTS})
-configure_file(test-all.py ${CMAKE_BINARY_DIR}/test-all.py COPYONLY)
+configure_file(test_all.py ${CMAKE_BINARY_DIR}/test_all.py COPYONLY)
 
 if("${MSVC}" OR "${MSYS}")
   target_link_libraries(tests common GTSI graph nodeinfo)
 else()
   target_link_libraries(tests seccomp common GTSI graph nodeinfo)
 endif()  
+
+add_custom_target(test COMMAND python2 ${CMAKE_BINARY_DIR}/test_all.py WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
