Building tools is now default (disable with "DTOOLS=0" option for cmake)

--- a/src/tools/CMakeLists.txt
+++ b/src/tools/CMakeLists.txt
@@ -1,6 +1,6 @@
 # Change the location of executables
 set (CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
-set (TOOLS OFF CACHE BOOL "Tools")
+set (TOOLS ON CACHE BOOL "Tools")
 
 if(${TOOLS})
   # grap-match
