PYTHON_BINDING=1 is now the default cmake option README.md updated accordingly

--- a/src/bindings/python/CMakeLists.txt
+++ b/src/bindings/python/CMakeLists.txt
@@ -1,5 +1,5 @@
 # Variables-----------------------------------------------------------------
-set(PYTHON_BINDING OFF CACHE BOOL "Python bindings")
+set(PYTHON_BINDING ON CACHE BOOL "Python bindings")
 
 # Removes the use of 'pythonxx_d.lib'
 if(${MSVC})
