Added use_existing option for disassembly to specify wether an existing dot file should be used or overwritten Disassembly is now available in pygrap module (in addition to grap_disassembler)

--- a/src/bindings/python/CMakeLists.txt
+++ b/src/bindings/python/CMakeLists.txt
@@ -14,6 +14,7 @@ if(PYTHON_BINDING)
 
   # Dependencies
   set(SWIG_MODULE_pygrap_EXTRA_DEPS dot_writer.py)
+  set(SWIG_MODULE_pygrap_EXTRA_DEPS ../../tools/grap_disassembler/disassembler.py)
 
   # SWIG
   FIND_PACKAGE(SWIG REQUIRED)
