--- a/src/tools/grap-match/CMakeLists.txt
+++ b/src/tools/grap-match/CMakeLists.txt
@@ -10,6 +10,7 @@ if("${MSVC}" OR "${MSYS}")
   target_link_libraries(grap-match common GTSI graph nodeinfo)
 else()
   target_link_libraries(grap-match seccomp common GTSI graph nodeinfo pthread)
+  target_link_libraries(grap-match ${Boost_SYSTEM_LIBRARY} ${Boost_FILESYSTEM_LIBRARY})
 endif()  
 configure_file(grap-match.py ${CMAKE_BINARY_DIR}/grap-match.py COPYONLY)
 
