Fixed Boost import and windows '\r' issue

--- a/src/tools/grap-match/CMakeLists.txt
+++ b/src/tools/grap-match/CMakeLists.txt
@@ -8,6 +8,7 @@ add_executable(grap-match ${SRCS_GRAP-MATCH})
 
 if("${MSVC}" OR "${MSYS}")
   target_link_libraries(grap-match common GTSI graph nodeinfo)
+  target_link_libraries(grap-match ${Boost_SYSTEM_LIBRARY} ${Boost_FILESYSTEM_LIBRARY})
 else()
   target_link_libraries(grap-match seccomp common GTSI graph nodeinfo pthread)
   target_link_libraries(grap-match ${Boost_SYSTEM_LIBRARY} ${Boost_FILESYSTEM_LIBRARY})
